<resources>
    <string name="app_name">Device Test</string>

    <string name="display">Display</string>
    <string name="touch_screen">Touch</string>
    <string name="com_port">COM</string>
    <string name="ethernet">Ethernet</string>

    <string name="test_display">Тест дисплея</string>
    <string name="test_touch_screen">Тест touch панели</string>
    <string name="test_com_port">Тест COM порта</string>
    <string name="test_ethernet">Тест порта Ethernet</string>

    <string name="clear">Очистить</string>
    <string name="exit">Выход</string>

    <string name="testing_now">Сейчас тестируется</string>
    <string name="baudrates_descending_order">Скоростя в порядке убывания</string>
    <string name="com_1">COM1</string>
    <string name="com_2">COM2</string>
    <string name="com_n_pass_test_successfully">Успешный тест (COM%d)</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="test_with_plug_description">* На заглушке для тестов должны быть перемычки на линиях 2-3 (RXD-TXD), 4-6 (DTR-DSR)</string>
    <string name="test_com_port_only_rxd_txd">! На данном устройстве тестируются только линии 2-3 !</string>

    <string name="error_opening_com_port">Ошибка открытия порта (COM%d, %s)</string>
    <string name="error_writing_to_com_port">Ошибка записи в порт (COM%d, %s)</string>
    <string name="error_reading_from_com_port">Ошибка чтения из СOM порта</string>
    <string name="test_plug_not_connected">Заглушка для теста не подключена (COM%d, %d)</string>
    <string name="error_testing_rxd_txd">Ошибка теста линий RXD-TXD (COM%d, %d)</string>
    <string name="error_testing_dtr_dsr">Ошибка теста линий DTR-DSR (COM%d, %d)</string>
    <string name="error_testing_rxd_txd_dtr_dsr">Ошибка теста линий и RXD-TXD, и DTR-DSR (COM%d, %d)</string>

    <string name="ethernet_params">Параметры Ethernet:</string>
    <string name="ip..">IP:</string>
    <string name="mask..">маска:</string>
    <string name="gateway..">шлюз:</string>
    <string name="ethernet_ping_test_count">ping %s (%d)</string>
    <string name="ethernet_test_successful_wo_iperf">Успешный тест (без iperf)</string>
    <string name="ethernet_test_successful">Успешный тест</string>
    <string name="ethernet_ping_test_successful">Успешный ping %s</string>
    <string name="ethernet_ping_test_fails">Неудачный ping %s (%d)</string>
    <string name="error_test_iperf">Ошибка теста iperf (ping OK)</string>
    <string name="error_test_iperf_low_bandwidth">Ошибка теста iperf: bandwidth=%.1f</string>

    <string name="bootloader">Bootloader</string>
    <string name="reboot_to_bootloader_dialog_title">Перезагрузка в bootloader</string>
    <string name="reboot_to_bootloader_dialog_message">Устройство будет перезагружено в bootloader режиме (режим обновления прошивки). Продолжить?</string>
</resources>