<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_com_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/com_1"
            android:textSize="34sp"
            app:buttonTint="@color/app_main_variant" />

        <RadioButton
            android:id="@+id/radio_button_com_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/com_2"
            android:textSize="34sp"
            app:buttonTint="@color/app_main_variant" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview_test_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="@string/testing_now"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/textview_test_status"
        app:layout_constraintTop_toTopOf="@+id/textview_test_status"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textview_now_testing_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_test_status"
        tools:text="Tested COM"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textview_now_testing_baudrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textview_now_testing_com"
        app:layout_constraintTop_toBottomOf="@+id/textview_now_testing_com"
        tools:text="Tested baudrate"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textview_test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Test result"
        android:textSize="58sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_now_testing_baudrate"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="126dp"
        android:layout_marginBottom="48dp"
        android:text="START"
        android:textSize="34sp"
        app:backgroundTint="@color/button_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_stop"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="126dp"
        android:enabled="false"
        android:text="STOP"
        android:textSize="34sp"
        app:backgroundTint="@color/button_stop_color"
        app:layout_constraintBottom_toBottomOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_start" />

    <CheckBox
        android:id="@+id/checkBoxBaudratesDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="Скоростя в порядке убывания"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>