<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".TestEthernetActivity">

    <TextView
        android:id="@+id/textview_ethernet_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ethernet_params"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textview_test_result"
        app:layout_constraintStart_toEndOf="@+id/textview_test_result"
        app:layout_constraintTop_toTopOf="@+id/textview_test_result"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textview_label_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ip.."
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_ethernet_params" />

    <TextView
        android:id="@+id/textview_label_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mask.."
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_label_ip"
        app:layout_constraintTop_toBottomOf="@+id/textview_label_ip" />

    <TextView
        android:id="@+id/textview_label_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateway.."
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_label_mask"
        app:layout_constraintTop_toBottomOf="@+id/textview_label_mask" />

    <TextView
        android:id="@+id/textview_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textview_label_ip"
        app:layout_constraintTop_toTopOf="@+id/textview_label_ip"
        tools:text="192.168.1.100" />

    <TextView
        android:id="@+id/textview_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textview_ip"
        app:layout_constraintTop_toBottomOf="@+id/textview_ip"
        tools:text="255.255.255.0" />

    <TextView
        android:id="@+id/textview_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textview_mask"
        app:layout_constraintTop_toBottomOf="@+id/textview_mask"
        tools:text="192.168.1.1" />

    <TextView
        android:id="@+id/textview_test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"
        android:textSize="58sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_label_gateway"
        tools:text="Test result"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="126dp"
        android:layout_marginBottom="48dp"
        android:text="@string/start"
        android:textSize="34sp"
        app:backgroundTint="@color/button_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_stop"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="126dp"
        android:enabled="false"
        android:text="@string/stop"
        android:textSize="34sp"
        android:visibility="gone"
        app:backgroundTint="@color/button_stop_color"
        app:layout_constraintBottom_toBottomOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_start" />

    <TextView
        android:id="@+id/textview_label_ping_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:text="Ping IP:"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_ethernet_params"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edittext_ping_ip"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:digits="0123456789."
        android:ems="10"
        android:hint="Ping IP"
        android:imeOptions="actionDone"
        android:inputType="number|numberDecimal"
        android:paddingTop="0dp"
        android:paddingBottom="2dp"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_label_ping_ip"
        app:layout_constraintStart_toEndOf="@+id/textview_label_ping_ip"
        tools:text="192.168.254.254" />

    <TextView
        android:id="@+id/textview_label_ping_n_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Ping n="
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_label_ping_ip"
        app:layout_constraintTop_toBottomOf="@+id/textview_label_ping_ip" />

    <EditText
        android:id="@+id/edittext_ping_n_times"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:hint="Кол-во ping"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:paddingTop="0dp"
        android:paddingBottom="2dp"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_label_ping_n_times"
        app:layout_constraintStart_toStartOf="@+id/edittext_ping_ip"
        tools:text="100" />

</androidx.constraintlayout.widget.ConstraintLayout>